Revert animal sniffed breakage, make field private